2011-02-03  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (gnus-article-setup-buffer): Stop the date timer if
	gnus-article-update-date-headers is nil.

2011-02-01  Julien Danjou  <julien@danjou.info>

	* mm-uu.el (mm-uu-type-alist): Add support for git format-patch diff
	format.

	* mm-decode.el (mm-inline-media-tests): Do not check for diff-mode it's
	standard in Emacs nowadays.

	* color.el (color-gradient): Add a color-gradient function.

2011-02-01  Stefan Monnier  <monnier@iro.umontreal.ca>

	* message.el (message-expand-name): Don't trust the return value of
	bbdb-complete-name.
	(message-check-news-header-syntax): Remove unused var `start'.
	(message-idna-to-ascii-rhs-1): Remove unused vars `rhs' and `address'.
	(message-inhibit-body-encoding): Move to before first use.
	(mail-abbrev-mode-regexp, Expires, User-Agent, Lines, Distribution)
	(To, References, In-Reply-To, Newsgroups, Subject, Path, From)
	(Organization, Message-ID, Date, mh-previous-window-config):
	Defvar the vars using dynamic scoping.

2011-02-01  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-render-td): Only do colours at the final rendering.
	Should be slightly faster.
	(shr-insert-table): Fix up TD background colours when doing the
	vertical padding.

	* gnus-art.el (article-date-ut): Protect against articles with no Date
	header.
	(article-update-date-lapsed): Don't use current-column to find the
	horizontal position.  It's fragile in the presence of \003 characters.

	* gnus-start.el (gnus-read-active-file-1): Remove dead parameter infos.

2011-01-31  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-art.el (article-transform-date): Rewrite to still work when
	there are several rfc2822 parts.
	(article-transform-date): Fix infinite recursion.
	(article-date-ut): Replace infinitely many Date headers with a single
	one when called interactively.

	* nnimap.el (nnimap-wait-for-response): Wait for results in a more
	secure manner.
